# kamilog

./: .hupy.config.jsonc  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  pyproject.toml  setup.cfg
docs/: install_guide.md  usage_doc.md
examples/: all_levels.py  ansi-style-demo.py  basic_logging.py  comment_banner_demo.py  diff_only.py  diff_only_filter.py  diff_only_stress.py  examples_note  line_padding_demo.py  line_padding_example.py  relative_time.py  timestamp_formats.py  verbosity.py  verbosity_demo.py
examples/ansi/: ansi-style-demo.py  ansi-tt-demo.py
examples/cb/: cb-demo.py  cb-number-demo.py  cb-offset-demo.py  cb-zero_demo.py
examples/logger/: logger-all_levels.py  logger-all_levels_demo.py  logger-basic.py  logger-diff_only.py  logger-diff_only_demo.py  logger-diff_only_stress_demo.py  logger-timestamps-format.py  logger-timestamps-format_demo.py  logger-timestamps-relative.py  logger-timestamps-relative_demo.py  logger-timestamps.py  logger-timestamps_demo.py  timestamps-verbosity.py  timestamps-verbosity_demo.py
kamilog/: __init__.py  kamilog.py
tests/: source_quality_test.py  verbosity_test.py
tests/ansi/: ansi-color-level_test.py  ansi-disable-color_test.py  ansi-tty-detect_test.py
tests/cb/: cb-centered_test.py  cb-left_just_test.py  cb-right_just_test.py  cb-validation_test.py
tests/dof/: dof-common-prefix_test.py  dof-cut-boundary_test.py  dof-disable_test.py  dof-embedded-tab_test.py  dof-marker-render_test.py  dof-process_test.py  dof-warmup_test.py
tests/lf/: lf-level-color_test.py  lf-named-vs-root_test.py  (+2 more)
(+28 files in other folders)
