[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kamilog"
dynamic = ["version"]
authors = [{name = "kamiLeL"}]
description = "Customized logging output module with structured format, ANSI color, and custom log levels"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kami-lel/kamilog"

[tool.setuptools.dynamic]
version = {attr = "kamilog.kamilog.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["kamilog*"]
