[metadata]
name = kamilog
version = attr: kamilog.kamilog.__version__
author = attr: kamilog.kamilog.__author__
description = Customized logging output module with structured format, ANSI color, and custom log levels
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kami-lel/kamilog
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = kamilog
python_requires = >=3.8
